# pica

./: .gitignore  Analysis_For_L_Para_Run.ipynb  Analysis_for_Histograms.ipynb  Execute_Files.ipynb  Plotting.ipynb  Prepare_Files_L_Parameter_Run.ipynb  Prepare_Files_Sigma_T_Paramter_Run_w0_a0_Changing_E_100mJ.ipynb  README.md  __setup.py  analysis_plots.ipynb  analysis_plots_125.ipynb  analysis_plots_atomic.ipynb  config8.yml  large_beam.yml  large_beam_full.h5  large_beam_full.yml  laser_spectrum.nb  pencil_beam.yml  pyproject.toml  run_tests.py  setup.cfg  setup.py  small_beam.yml  small_beam_full.yml  weird_beam.yml
YML_Files/: Check.yml  Check_Readme.txt  First_Run.txt  First_Run.yml  First_Run1.yml  First_Run_Smaller_Det.yml  L_Para_Run.yml  Sigmax_Sigmay10.yml  Sigmax_Sigmay15.yml  Sigmax_Sigmay20.yml  Sigmax_Sigmay25.yml
YML_Files/L_3_8/: Plotting.ipynb  Sigmax_Sigmay10.yml  Sigmax_Sigmay15.yml  Sigmax_Sigmay20.yml  Sigmax_Sigmay25.yml  Sigmax_Sigmay5.yml
examples/: analysis_script.ipynb  atomic.yml  large_beam.yml  pencil_beam.yml  small_beam.yml  testbeam1.yml  testbeam2.yml  testbeam3.yml  testbeam4.yml  testbeam5.yml  weird_beam.yml
jupyter_notebooks/: Analysis.ipynb  Analysis_For_W_0_Para_Run.ipynb  Electron_Beam_Analysis.ipynb  New_Analysis.ipynb  Prepare_Files_Sigma_T_Paramter_Run_100mJ.ipynb
luxeics/: Untitled.ipynb  Untitled1.ipynb  __init__.py  auxiliary.py  collisions.py  constants.py  inout.py  radint.py  spectrum.py
pica/: __init__.py  collisions.py  config.py  constants.py  inout.py  input.py  orbitals.py  output.py  spectrum.py
