[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name    = "pica"
dynamic = ["version", "readme"]
#version = "1.2.9"
dependencies = [
                "numpy >= 2.0",
                "scipy",
                "pyyaml",
                "h5py"
                ]
requires-python = ">=3.10"
authors = [{name="Daniel Seipt", email="d.seipt@hi-jena.gsi.de"}]
maintainers = []
description = ""

[project.optional-dependencies]


[project.urls]
repository = "https://github.com/hixps/pica"


[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "pica.__version__.__version__"}               # any module attribute compatible with ast.literal_eval

# """
# [metadata]
# version = attr: pica.__version__.__version__
# author = Daniel Seipt, Dupish
# author_email = d.seipt@hi-jena.gsi.de
# description = High-Energy Polarized ICS Gamma-Ray Simulations
# long_description = file: README.md
# keywords = hixps, radiation, LUXE,
# classifiers =
#     Programming Language :: Python :: 3
# url = https://github.com/hixps/pica


# [options]
# zip_safe = False
# packages = 
#     pica
# python_requires = >=3.9
# install_requires =
#     numpy
#     scipy
#     pyyaml
#     h5py
# """

