[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "pica"
dynamic = ["version", "readme"]
license = {file = "LICENSE"}
dependencies = [
                "numpy >= 2.0",
                "scipy",
                "pyyaml",
                "h5py",
                "dacite"
                ]
requires-python = ">=3.10"
authors = [{name="Daniel Seipt", email="d.seipt@hi-jena.gsi.de"},
           {name="Dupish Dupish"}]
description = "High-Energy Polarized ICS Gamma-Ray Simulations"
keywords = ["ICS", "hixps", "LUXE", "gamma rays", "gamma source", "scattering"]


[project.optional-dependencies]


[project.urls]
Repository = "https://github.com/hixps/pica"


[tool.setuptools.dynamic]
readme = {file = ["README.md"]}
version = {attr = "pica.__version__.__version__"}

