[metadata]
name = luxeics
version = attr: luxeics.__version__.__version__
author = Daniel Seipt, Dupish
author_email = d.seipt@hi-jena.gsi.de
description = High-Energy Polarized ICS Gamma-Ray Simulations
long_description = file: README.md
keywords = hixps, radiation, LUXE,
classifiers =
    Programming Language :: Python :: 3
url = https://github.com/hixps/luxeics


[options]
zip_safe = False
packages = 
    luxeics
python_requires = >=3.9
install_requires =
    numpy
    scipy
    matplotlib
    yaml
    pyyaml
    h5py


